--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # ==============================================
-# ????????????
+# ?????????
 # ==============================================
 spring.application.name=Recipeapp
 
@@ -21,24 +21,26 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+# ??????????????????
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.orm.jpa=DEBUG
+logging.level.org.springframework.transaction=DEBUG
+
 # ==============================================
-# ????????????????????
+# ????????????
 # ==============================================
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
 
-# Tomcat ???????-1 ?????
-server.tomcat.max-swallow-size=-1
+## Tomcat ????-1 ?????
+#server.tomcat.max-swallow-size=-1
+
+# Tomcat???????????????
+server.tomcat.max-swallow-size=2MB
 
 # ==============================================
 # Thymeleaf ??
 # ==============================================
 spring.thymeleaf.enable-spring-el-compiler=true
 spring.thymeleaf.encoding=UTF-8
-
-# ==============================================
-# ??????????????
-# ==============================================
-# SQL????????????
-# logging.level.org.hibernate.SQL=DEBUG
-# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
