--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 spring.application.name=Recipeapp
 
 # ==============================================
-# H2 ????????
+# H2 ??????
 # ==============================================
 spring.datasource.url=jdbc:h2:file:./data/recipeapp
 spring.datasource.driver-class-name=org.h2.Driver
@@ -21,26 +21,44 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-# ??????????????????
+# ????
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.springframework.orm.jpa=DEBUG
 logging.level.org.springframework.transaction=DEBUG
 
 # ==============================================
-# ????????????
+# ??????????????????
 # ==============================================
+spring.servlet.multipart.enabled=true
+# 1???????
 spring.servlet.multipart.max-file-size=10MB
+# ??????????
 spring.servlet.multipart.max-request-size=20MB
-
-## Tomcat ????-1 ?????
-#server.tomcat.max-swallow-size=-1
-
-# Tomcat???????????????
-server.tomcat.max-swallow-size=2MB
+# ?????????????????
+spring.servlet.multipart.resolve-lazily=true
 
 # ==============================================
-# Thymeleaf ??
+# Tomcat
+# ==============================================
+# ????????????????????????????
+server.tomcat.max-swallow-size=-1
+# POST????????????????????
+# server.tomcat.max-http-form-post-size=20MB
+
+# ==============================================
+# ??????????
+# /uploads ?????????????
+# ==============================================
+spring.web.resources.static-locations=\
+file:./uploads/,\
+classpath:/static/,\
+classpath:/public/,\
+classpath:/resources/,\
+classpath:/META-INF/resources/
+
+# ==============================================
+# Thymeleaf
 # ==============================================
 spring.thymeleaf.enable-spring-el-compiler=true
 spring.thymeleaf.encoding=UTF-8
