--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 spring.application.name=Recipeapp
 
 # ==============================================
-# H2 ??????
+# H2 ????????
 # ==============================================
 spring.datasource.url=jdbc:h2:file:./data/recipeapp
 spring.datasource.driver-class-name=org.h2.Driver
@@ -28,27 +28,39 @@ logging.level.org.springframework.orm.jpa=DEBUG
 logging.level.org.springframework.transaction=DEBUG
 
 # ==============================================
-# ??????????????????
+# ???????????????????????
 # ==============================================
 spring.servlet.multipart.enabled=true
-# 1???????
+# 1??????????
 spring.servlet.multipart.max-file-size=10MB
-# ??????????
+# ?????????????
 spring.servlet.multipart.max-request-size=20MB
-# ?????????????????
+# ????????????????
 spring.servlet.multipart.resolve-lazily=true
+# ???????????????
+spring.servlet.multipart.file-size-threshold=0
 
 # ==============================================
-# Tomcat
+# Tomcat???????
 # ==============================================
 # ????????????????????????????
 server.tomcat.max-swallow-size=-1
-# POST????????????????????
-# server.tomcat.max-http-form-post-size=20MB
+# POST ???????????
+server.tomcat.max-http-form-post-size=20MB
+# ????????
+server.tomcat.connection-timeout=20000
+# ???????
+server.tomcat.threads.max=200
 
 # ==============================================
-# ??????????
-# /uploads ?????????????
+# ??????????Tomcat???????????
+# ==============================================
+# ? JVM????????????????????
+# -Dorg.apache.tomcat.util.http.fileupload.fileCountMax=200
+
+# ==============================================
+# ????????
+# /uploads ?????????
 # ==============================================
 spring.web.resources.static-locations=\
 file:./uploads/,\
@@ -58,7 +70,8 @@ classpath:/resources/,\
 classpath:/META-INF/resources/
 
 # ==============================================
-# Thymeleaf
+# Thymeleaf??
 # ==============================================
 spring.thymeleaf.enable-spring-el-compiler=true
 spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
