--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # ==============================================
-# ?????????
+# ??????????
 # ==============================================
 spring.application.name=Recipeapp
 
@@ -28,35 +28,39 @@ logging.level.org.springframework.orm.jpa=DEBUG
 logging.level.org.springframework.transaction=DEBUG
 
 # ==============================================
-# ???????????????????????
+# ??????????????????
 # ==============================================
 spring.servlet.multipart.enabled=true
-# 1??????????
+# 1????????????
 spring.servlet.multipart.max-file-size=10MB
 # ?????????????
 spring.servlet.multipart.max-request-size=20MB
-# ????????????????
-spring.servlet.multipart.resolve-lazily=true
 # ???????????????
+spring.servlet.multipart.resolve-lazily=false
+# ??????????
 spring.servlet.multipart.file-size-threshold=0
 
 # ==============================================
-# Tomcat???????
+# Tomcat ??????
 # ==============================================
-# ????????????????????????????
+# ????????????????????????
 server.tomcat.max-swallow-size=-1
 # POST ???????????
 server.tomcat.max-http-form-post-size=20MB
 # ????????
 server.tomcat.connection-timeout=20000
-# ???????
+# ?????
 server.tomcat.threads.max=200
+# ?????????
+server.tomcat.max-parameter-count=10000
+# HTTP??????????
+server.max-http-request-header-size=64KB
 
 # ==============================================
-# ??????????Tomcat???????????
+# ???Tomcat ????????????
 # ==============================================
-# ? JVM????????????????????
-# -Dorg.apache.tomcat.util.http.fileupload.fileCountMax=200
+# JVM???????????????????????
+# -Dorg.apache.tomcat.util.http.fileupload.fileCountMax=10000
 
 # ==============================================
 # ????????
