サイドバーアクティブ機能追加

--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,16 @@
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
+
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <jvmArguments>
+                        -Dorg.apache.tomcat.util.http.fileupload.fileCountMax=10000
+                    </jvmArguments>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
